--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <ul>
-            <li><a href="sequence.html">Генерация последовательности</a></li>
+            <li><a href="sequence/sequence.html">Генерация последовательности</a></li>
         </ul>
     </body>
 </html>
