--- a/guitar-chords/guitar-chords.html
+++ b/guitar-chords/guitar-chords.html
@@ -20,12 +20,13 @@
   .card {
       width: 150px;
       height: 200px;
-      border: 1px solid black;
+      border: 1px solid rgb(0 0 0 / 24%);
       border-radius: 5px;
       margin-right: 10px;
       display: flex;
       align-items: center;
       flex-direction: column;
+      padding-top: 20px;
       box-shadow: 1px 3px 7px rgb(0 0 0 / 30%);
    }
 </style>
